@@ -228,17 +228,14 @@ proper list."
     nil
     (cadr last)
     (car fast))
-
-  (def set-lastcar (list object)
+  
+  (def (setf lastcar) (object list)
       "Sets the last element of LIST. Signals a type-error if LIST is not a proper
 list."
     nil
     nil
     (setf (cadr last) object)
-    (setf (car fast) object))
-
-  (defsetf lastcar set-lastcar)
-  )
+    (setf (car fast) object)))
 
 (defun make-circular-list (length &key initial-element)
   "Creates a circular list of LENGTH with the given INITIAL-ELEMENT."
