@@ -243,7 +243,7 @@ not a sequence, or is an empty sequence."
                  :datum sequence
                  :expected-type '(and sequence (not (satisfies emptyp)))))))
 
-(defun set-first-elt (sequence object)
+(defun (setf first-elt) (object sequence)
   "Sets the first element of SEQUENCE. Signals a type-error if SEQUENCE is
 not a sequence, is an empty sequence, or if OBJECT cannot be stored in SEQUENCE."
   ;; Can't just directly use ELT, as it is not guaranteed to signal the
@@ -257,7 +257,6 @@ not a sequence, is an empty sequence, or if OBJECT cannot be stored in SEQUENCE.
          (error 'type-error
                 :datum sequence
                 :expected-type '(and sequence (not (satisfies emptyp)))))))
-(defsetf first-elt set-first-elt)
 
 (defun last-elt (sequence)
   "Returns the last element of SEQUENCE. Signals a type-error if SEQUENCE is
@@ -274,7 +273,7 @@ not a proper sequence, or is an empty sequence."
                   :datum sequence
                   :expected-type '(and proper-sequence (not (satisfies emptyp))))))))
 
-(defun set-last-elt (sequence object)
+(defun (setf last-elt) (object sequence)
   "Sets the last element of SEQUENCE. Signals a type-error if SEQUENCE is not a proper
 sequence, is an empty sequence, or if OBJECT cannot be stored in SEQUENCE."
   (let ((len 0))
@@ -286,7 +285,6 @@ sequence, is an empty sequence, or if OBJECT cannot be stored in SEQUENCE."
            (error 'type-error
                   :datum sequence
                   :expected-type '(and proper-sequence (not (satisfies emptyp))))))))
-(defsetf last-elt set-last-elt)
 
 (defun starts-with-subseq (prefix sequence &rest args &key (return-suffix nil) &allow-other-keys)
   "Test whether the first elements of SEQUENCE are the same (as per TEST) as the elements of PREFIX.
